[package]
name = "api_test"
version = "0.1.0"
edition = "2021"
authors = ["Tommy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-web = "4.3.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
mysql_async = "0.31.2"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = "1.25.0"
